--- a/public/account.html
+++ b/public/account.html
@@ -7,7 +7,8 @@
     <title>Account</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/auth.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/account.js"></script>
 </head>
 
 <body>
@@ -33,25 +34,50 @@
     <div class="container py-5">
         <h2 class="text-center mb-4">Account Settings</h2>
         <div class="card mx-auto p-4 shadow" style="max-width: 500px;">
-            <form>
+            <form id="accountForm">
                 <div class="mb-3">
                     <label for="username" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="username" value="John Doe">
+                    <input type="text" class="form-control" id="username" name="name" autocomplete="name">
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" value="john.doe@example.com">
+                    <input type="email" class="form-control" id="email" name="email" autocomplete="email">
                 </div>
                 <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" value="********">
+                    <label for="password" class="form-label">New Password</label>
+                    <input type="password" class="form-control" id="password" name="password"
+                        autocomplete="new-password" placeholder="Leave blank to keep current password">
                 </div>
                 <div class="d-grid">
                     <button type="submit" class="btn btn-primary">Save Changes</button>
                 </div>
             </form>
+            <div id="statusMessage" class="alert d-none mt-3"></div>
+            <div class="d-grid mt-3">
+                <button id="deleteAccount" class="btn btn-danger">Delete Account</button>
+            </div>
         </div>
     </div>
+
+    <!-- Delete Confirmation Modal -->
+    <div class="modal fade" id="deleteConfirmModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Confirm Delete Account</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to delete your account? This action cannot be undone.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-danger" id="confirmDelete">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script>
         checkAuth();
 
