--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -20,7 +20,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="/account">Account</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/profile">Account</a></li>
                     <li class="nav-item"><a class="nav-link" href="/budgeting">Budgeting</a></li>
                     <li class="nav-item"><a class="nav-link" href="/transactions">Transactions</a></li>
                     <li class="nav-item"><a class="nav-link" href="/reports">Reports</a></li>
