--- a/public/reports.html
+++ b/public/reports.html
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/account">Account</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/profile">Account</a></li>
                 </ul>
             </div>
         </div>
