--- a/public/transactions.html
+++ b/public/transactions.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/account">Account</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/profile">Account</a></li>
                     <li class="nav-item"><a class="btn btn-primary nav-link text-white" href="/">Logout</a></li>
                 </ul>
             </div>
